simdX86/c2nimsrc/simdSse.h

//redundant: void _m_empty (void);
void _mm_empty (void);
int _mm_extract_epi16 (__m128i a, int imm8);
int _mm_extract_epi32 (__m128i a, const int imm8);
__int64 _mm_extract_epi64 (__m128i a, const int imm8);
int _mm_extract_epi8 (__m128i a, const int imm8);
int _mm_extract_pi16 (__m64 a, int imm8);
int _mm_extract_ps (__m128 a, const int imm8);
__m128d _mm_floor_pd (__m128d a);
__m128 _mm_floor_ps (__m128 a);
__m128d _mm_floor_sd (__m128d a, __m128d b);
__m128 _mm_floor_ss (__m128 a, __m128 b);
__m64 _m_from_int (int a);
__m64 _m_from_int64 (__int64 a);
unsigned int _MM_GET_EXCEPTION_MASK ();
unsigned int _MM_GET_EXCEPTION_STATE ();
unsigned int _MM_GET_FLUSH_ZERO_MODE ();
unsigned int _MM_GET_ROUNDING_MODE ();
unsigned int _mm_getcsr (void);
__m128i _mm_hadd_epi16 (__m128i a, __m128i b);
__m128i _mm_hadd_epi32 (__m128i a, __m128i b);
__m128d _mm_hadd_pd (__m128d a, __m128d b);
__m64 _mm_hadd_pi16 (__m64 a, __m64 b);
__m64 _mm_hadd_pi32 (__m64 a, __m64 b);
__m128 _mm_hadd_ps (__m128 a, __m128 b);
__m128i _mm_hadds_epi16 (__m128i a, __m128i b);
__m64 _mm_hadds_pi16 (__m64 a, __m64 b);
__m128i _mm_hsub_epi16 (__m128i a, __m128i b);
__m128i _mm_hsub_epi32 (__m128i a, __m128i b);
__m128d _mm_hsub_pd (__m128d a, __m128d b);
__m64 _mm_hsub_pi16 (__m64 a, __m64 b);
__m64 _mm_hsub_pi32 (__m64 a, __m64 b);
__m128 _mm_hsub_ps (__m128 a, __m128 b);
__m128i _mm_hsubs_epi16 (__m128i a, __m128i b);
__m64 _mm_hsubs_pi16 (__m64 a, __m64 b);
__m128i _mm_insert_epi16 (__m128i a, int i, int imm8);
__m128i _mm_insert_epi32 (__m128i a, int i, const int imm8);
__m128i _mm_insert_epi64 (__m128i a, __int64 i, const int imm8);
__m128i _mm_insert_epi8 (__m128i a, int i, const int imm8);
__m64 _mm_insert_pi16 (__m64 a, int i, int imm8);
__m128 _mm_insert_ps (__m128 a, __m128 b, const int imm8);
__m128i _mm_lddqu_si128 (__m128i const* mem_addr);
void _mm_lfence (void);
__m128d _mm_load_pd (double const* mem_addr);
__m128d _mm_load_pd1 (double const* mem_addr);
__m128 _mm_load_ps (float const* mem_addr);
__m128 _mm_load_ps1 (float const* mem_addr);
__m128d _mm_load_sd (double const* mem_addr);
__m128i _mm_load_si128 (__m128i const* mem_addr);
__m128 _mm_load_ss (float const* mem_addr);
__m128d _mm_load1_pd (double const* mem_addr);
__m128 _mm_load1_ps (float const* mem_addr);
__m128d _mm_loaddup_pd (double const* mem_addr);
__m128d _mm_loadh_pd (__m128d a, double const* mem_addr);
__m128 _mm_loadh_pi (__m128 a, __m64 const* mem_addr);
__m128i _mm_loadl_epi64 (__m128i const* mem_addr);
__m128d _mm_loadl_pd (__m128d a, double const* mem_addr);
__m128 _mm_loadl_pi (__m128 a, __m64 const* mem_addr);
__m128d _mm_loadr_pd (double const* mem_addr);
__m128 _mm_loadr_ps (float const* mem_addr);
__m128d _mm_loadu_pd (double const* mem_addr);
__m128 _mm_loadu_ps (float const* mem_addr);
__m128i _mm_loadu_si128 (__m128i const* mem_addr);
__m128i _mm_madd_epi16 (__m128i a, __m128i b);
__m64 _mm_madd_pi16 (__m64 a, __m64 b);
__m128i _mm_maddubs_epi16 (__m128i a, __m128i b);
__m64 _mm_maddubs_pi16 (__m64 a, __m64 b);
void _mm_maskmove_si64 (__m64 a, __m64 mask, char* mem_addr);
void _mm_maskmoveu_si128 (__m128i a, __m128i mask, char* mem_addr);
void _m_maskmovq (__m64 a, __m64 mask, char* mem_addr);
__m128i _mm_max_epi16 (__m128i a, __m128i b);
__m128i _mm_max_epi32 (__m128i a, __m128i b);
__m128i _mm_max_epi8 (__m128i a, __m128i b);
__m128i _mm_max_epu16 (__m128i a, __m128i b);
__m128i _mm_max_epu32 (__m128i a, __m128i b);
__m128i _mm_max_epu8 (__m128i a, __m128i b);
__m128d _mm_max_pd (__m128d a, __m128d b);
__m64 _mm_max_pi16 (__m64 a, __m64 b);
__m128 _mm_max_ps (__m128 a, __m128 b);
__m64 _mm_max_pu8 (__m64 a, __m64 b);
__m128d _mm_max_sd (__m128d a, __m128d b);
__m128 _mm_max_ss (__m128 a, __m128 b);
void _mm_mfence (void);
__m128i _mm_min_epi16 (__m128i a, __m128i b);
__m128i _mm_min_epi32 (__m128i a, __m128i b);
__m128i _mm_min_epi8 (__m128i a, __m128i b);
__m128i _mm_min_epu16 (__m128i a, __m128i b);
__m128i _mm_min_epu32 (__m128i a, __m128i b);
__m128i _mm_min_epu8 (__m128i a, __m128i b);
__m128d _mm_min_pd (__m128d a, __m128d b);
__m64 _mm_min_pi16 (__m64 a, __m64 b);
__m128 _mm_min_ps (__m128 a, __m128 b);
__m64 _mm_min_pu8 (__m64 a, __m64 b);
__m128d _mm_min_sd (__m128d a, __m128d b);
__m128 _mm_min_ss (__m128 a, __m128 b);
__m128i _mm_minpos_epu16 (__m128i a);
__m128i _mm_move_epi64 (__m128i a);
__m128d _mm_move_sd (__m128d a, __m128d b);
__m128 _mm_move_ss (__m128 a, __m128 b);
__m128d _mm_movedup_pd (__m128d a);
__m128 _mm_movehdup_ps (__m128 a);
__m128 _mm_movehl_ps (__m128 a, __m128 b);
__m128 _mm_moveldup_ps (__m128 a);
__m128 _mm_movelh_ps (__m128 a, __m128 b);
int _mm_movemask_epi8 (__m128i a);
int _mm_movemask_pd (__m128d a);
int _mm_movemask_pi8 (__m64 a);
int _mm_movemask_ps (__m128 a);
__m64 _mm_movepi64_pi64 (__m128i a);
__m128i _mm_movpi64_epi64 (__m64 a);
__m128i _mm_mpsadbw_epu8 (__m128i a, __m128i b, const int imm8);
__m128i _mm_mul_epi32 (__m128i a, __m128i b);
__m128i _mm_mul_epu32 (__m128i a, __m128i b);
__m128d _mm_mul_pd (__m128d a, __m128d b);
__m128 _mm_mul_ps (__m128 a, __m128 b);