simdX86/simdSseGeneric.nim


proc empty*() {.importc: "_mm_empty", header: "immintrin.h".}
proc extract_epi16*(a: m128i; imm8: cint): cint {.importc: "_mm_extract_epi16",
    header: "immintrin.h".}
proc extract_epi32*(a: m128i; imm8: cint): cint {.importc: "_mm_extract_epi32",
    header: "immintrin.h".}
proc extract_epi64*(a: m128i; imm8: cint): int64 {.importc: "_mm_extract_epi64",
    header: "immintrin.h".}
proc extract_epi8*(a: m128i; imm8: cint): cint {.importc: "_mm_extract_epi8",
    header: "immintrin.h".}
proc extract_pi16*(a: m64; imm8: cint): cint {.importc: "_mm_extract_pi16",
    header: "immintrin.h".}
proc extract*(a: m128; imm8: cint): cint {.importc: "_mm_extract_ps",
                                     header: "immintrin.h".}
proc floor*(a: m128d): m128d {.importc: "_mm_floor_pd", header: "immintrin.h".}
proc floor*(a: m128): m128 {.importc: "_mm_floor_ps", header: "immintrin.h".}
proc floor_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_floor_sd",
                                      header: "immintrin.h".}
proc floor_ss*(a: m128; b: m128): m128 {.importc: "_mm_floor_ss", header: "immintrin.h".}
proc from_int*(a: cint): m64 {.importc: "_m_from_int", header: "immintrin.h".}
proc from_int64*(a: int64): m64 {.importc: "_m_from_int64", header: "immintrin.h".}
proc GET_EXCEPTION_MASK*(): cuint {.importc: "_MM_GET_EXCEPTION_MASK",
                                 header: "immintrin.h".}
proc GET_EXCEPTION_STATE*(): cuint {.importc: "_MM_GET_EXCEPTION_STATE",
                                  header: "immintrin.h".}
proc GET_FLUSH_ZERO_MODE*(): cuint {.importc: "_MM_GET_FLUSH_ZERO_MODE",
                                  header: "immintrin.h".}
proc GET_ROUNDING_MODE*(): cuint {.importc: "_MM_GET_ROUNDING_MODE",
                                header: "immintrin.h".}
proc getcsr*(): cuint {.importc: "_mm_getcsr", header: "immintrin.h".}
proc hadd_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_hadd_epi16",
                                        header: "immintrin.h".}
proc hadd_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_hadd_epi32",
                                        header: "immintrin.h".}
proc hadd*(a: m128d; b: m128d): m128d {.importc: "_mm_hadd_pd", header: "immintrin.h".}
proc hadd_pi16*(a: m64; b: m64): m64 {.importc: "_mm_hadd_pi16", header: "immintrin.h".}
proc hadd_pi32*(a: m64; b: m64): m64 {.importc: "_mm_hadd_pi32", header: "immintrin.h".}
proc hadd*(a: m128; b: m128): m128 {.importc: "_mm_hadd_ps", header: "immintrin.h".}
proc hadds_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_hadds_epi16",
    header: "immintrin.h".}
proc hadds_pi16*(a: m64; b: m64): m64 {.importc: "_mm_hadds_pi16", header: "immintrin.h".}
proc hsub_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_hsub_epi16",
                                        header: "immintrin.h".}
proc hsub_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_hsub_epi32",
                                        header: "immintrin.h".}
proc hsub*(a: m128d; b: m128d): m128d {.importc: "_mm_hsub_pd", header: "immintrin.h".}
proc hsub_pi16*(a: m64; b: m64): m64 {.importc: "_mm_hsub_pi16", header: "immintrin.h".}
proc hsub_pi32*(a: m64; b: m64): m64 {.importc: "_mm_hsub_pi32", header: "immintrin.h".}
proc hsub*(a: m128; b: m128): m128 {.importc: "_mm_hsub_ps", header: "immintrin.h".}
proc hsubs_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_hsubs_epi16",
    header: "immintrin.h".}
proc hsubs_pi16*(a: m64; b: m64): m64 {.importc: "_mm_hsubs_pi16", header: "immintrin.h".}
proc insert_epi16*(a: m128i; i: cint; imm8: cint): m128i {.importc: "_mm_insert_epi16",
    header: "immintrin.h".}
proc insert_epi32*(a: m128i; i: cint; imm8: cint): m128i {.importc: "_mm_insert_epi32",
    header: "immintrin.h".}
proc insert_epi64*(a: m128i; i: int64; imm8: cint): m128i {.importc: "_mm_insert_epi64",
    header: "immintrin.h".}
proc insert_epi8*(a: m128i; i: cint; imm8: cint): m128i {.importc: "_mm_insert_epi8",
    header: "immintrin.h".}
proc insert_pi16*(a: m64; i: cint; imm8: cint): m64 {.importc: "_mm_insert_pi16",
    header: "immintrin.h".}
proc insert*(a: m128; b: m128; imm8: cint): m128 {.importc: "_mm_insert_ps",
    header: "immintrin.h".}
proc lddqu_si128*(mem_addr: ptr m128i): m128i {.importc: "_mm_lddqu_si128",
    header: "immintrin.h".}
proc lfence*() {.importc: "_mm_lfence", header: "immintrin.h".}
proc load_pd128*(mem_addr: ptr cdouble): m128d {.importc: "_mm_load_pd",
    header: "immintrin.h".}
proc load_pd1128*(mem_addr: ptr cdouble): m128d {.importc: "_mm_load_pd1",
    header: "immintrin.h".}
proc load_ps128*(mem_addr: ptr cfloat): m128 {.importc: "_mm_load_ps",
    header: "immintrin.h".}
proc load_ps1128*(mem_addr: ptr cfloat): m128 {.importc: "_mm_load_ps1",
    header: "immintrin.h".}
proc load_sd128*(mem_addr: ptr cdouble): m128d {.importc: "_mm_load_sd",
    header: "immintrin.h".}
proc load_si128*(mem_addr: ptr m128i): m128i {.importc: "_mm_load_si128",
    header: "immintrin.h".}
proc load_ss128*(mem_addr: ptr cfloat): m128 {.importc: "_mm_load_ss",
    header: "immintrin.h".}
proc load1_pd128*(mem_addr: ptr cdouble): m128d {.importc: "_mm_load1_pd",
    header: "immintrin.h".}
proc load1_ps128*(mem_addr: ptr cfloat): m128 {.importc: "_mm_load1_ps",
    header: "immintrin.h".}
proc loaddup_pd128*(mem_addr: ptr cdouble): m128d {.importc: "_mm_loaddup_pd",
    header: "immintrin.h".}
proc loadh_pd128*(a: m128d; mem_addr: ptr cdouble): m128d {.importc: "_mm_loadh_pd",
    header: "immintrin.h".}
proc loadh_pi128*(a: m128; mem_addr: ptr m64): m128 {.importc: "_mm_loadh_pi",
    header: "immintrin.h".}
proc loadl_epi64*(mem_addr: ptr m128i): m128i {.importc: "_mm_loadl_epi64",
    header: "immintrin.h".}
proc loadl_pd128*(a: m128d; mem_addr: ptr cdouble): m128d {.importc: "_mm_loadl_pd",
    header: "immintrin.h".}
proc loadl_pi128*(a: m128; mem_addr: ptr m64): m128 {.importc: "_mm_loadl_pi",
    header: "immintrin.h".}
proc loadr_pd128*(mem_addr: ptr cdouble): m128d {.importc: "_mm_loadr_pd",
    header: "immintrin.h".}
proc loadr_ps128*(mem_addr: ptr cfloat): m128 {.importc: "_mm_loadr_ps",
    header: "immintrin.h".}
proc loadu_pd128*(mem_addr: ptr cdouble): m128d {.importc: "_mm_loadu_pd",
    header: "immintrin.h".}
proc loadu_ps128*(mem_addr: ptr cfloat): m128 {.importc: "_mm_loadu_ps",
    header: "immintrin.h".}
proc loadu_si128*(mem_addr: ptr m128i): m128i {.importc: "_mm_loadu_si128",
    header: "immintrin.h".}
proc madd_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_madd_epi16",
                                        header: "immintrin.h".}
proc madd_pi16*(a: m64; b: m64): m64 {.importc: "_mm_madd_pi16", header: "immintrin.h".}
proc maddubs_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_maddubs_epi16",
    header: "immintrin.h".}
proc maddubs_pi16*(a: m64; b: m64): m64 {.importc: "_mm_maddubs_pi16",
                                    header: "immintrin.h".}
proc maskmove_si64*(a: m64; mask: m64; mem_addr: cstring) {.
    importc: "_mm_maskmove_si64", header: "immintrin.h".}
proc maskmoveu_si128*(a: m128i; mask: m128i; mem_addr: cstring) {.
    importc: "_mm_maskmoveu_si128", header: "immintrin.h".}
proc maskmovq*(a: m64; mask: m64; mem_addr: cstring) {.importc: "_m_maskmovq",
    header: "immintrin.h".}
proc max_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_max_epi16",
                                       header: "immintrin.h".}
proc max_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_max_epi32",
                                       header: "immintrin.h".}
proc max_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_max_epi8",
                                      header: "immintrin.h".}
proc max_epu16*(a: m128i; b: m128i): m128i {.importc: "_mm_max_epu16",
                                       header: "immintrin.h".}
proc max_epu32*(a: m128i; b: m128i): m128i {.importc: "_mm_max_epu32",
                                       header: "immintrin.h".}
proc max_epu8*(a: m128i; b: m128i): m128i {.importc: "_mm_max_epu8",
                                      header: "immintrin.h".}
proc max*(a: m128d; b: m128d): m128d {.importc: "_mm_max_pd", header: "immintrin.h".}
proc max_pi16*(a: m64; b: m64): m64 {.importc: "_mm_max_pi16", header: "immintrin.h".}
proc max*(a: m128; b: m128): m128 {.importc: "_mm_max_ps", header: "immintrin.h".}
proc max_pu8*(a: m64; b: m64): m64 {.importc: "_mm_max_pu8", header: "immintrin.h".}
proc max_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_max_sd", header: "immintrin.h".}
proc max_ss*(a: m128; b: m128): m128 {.importc: "_mm_max_ss", header: "immintrin.h".}
proc mfence*() {.importc: "_mm_mfence", header: "immintrin.h".}
proc min_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_min_epi16",
                                       header: "immintrin.h".}
proc min_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_min_epi32",
                                       header: "immintrin.h".}
proc min_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_min_epi8",
                                      header: "immintrin.h".}
proc min_epu16*(a: m128i; b: m128i): m128i {.importc: "_mm_min_epu16",
                                       header: "immintrin.h".}
proc min_epu32*(a: m128i; b: m128i): m128i {.importc: "_mm_min_epu32",
                                       header: "immintrin.h".}
proc min_epu8*(a: m128i; b: m128i): m128i {.importc: "_mm_min_epu8",
                                      header: "immintrin.h".}
proc min*(a: m128d; b: m128d): m128d {.importc: "_mm_min_pd", header: "immintrin.h".}
proc min_pi16*(a: m64; b: m64): m64 {.importc: "_mm_min_pi16", header: "immintrin.h".}
proc min*(a: m128; b: m128): m128 {.importc: "_mm_min_ps", header: "immintrin.h".}
proc min_pu8*(a: m64; b: m64): m64 {.importc: "_mm_min_pu8", header: "immintrin.h".}
proc min_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_min_sd", header: "immintrin.h".}
proc min_ss*(a: m128; b: m128): m128 {.importc: "_mm_min_ss", header: "immintrin.h".}
proc minpos_epu16*(a: m128i): m128i {.importc: "_mm_minpos_epu16",
                                  header: "immintrin.h".}
proc move_epi64*(a: m128i): m128i {.importc: "_mm_move_epi64", header: "immintrin.h".}
proc move_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_move_sd", header: "immintrin.h".}
proc move_ss*(a: m128; b: m128): m128 {.importc: "_mm_move_ss", header: "immintrin.h".}
proc movedup*(a: m128d): m128d {.importc: "_mm_movedup_pd", header: "immintrin.h".}
proc movehdup*(a: m128): m128 {.importc: "_mm_movehdup_ps", header: "immintrin.h".}
proc movehl*(a: m128; b: m128): m128 {.importc: "_mm_movehl_ps", header: "immintrin.h".}
proc moveldup*(a: m128): m128 {.importc: "_mm_moveldup_ps", header: "immintrin.h".}
proc movelh*(a: m128; b: m128): m128 {.importc: "_mm_movelh_ps", header: "immintrin.h".}
proc movemask_epi8*(a: m128i): cint {.importc: "_mm_movemask_epi8",
                                  header: "immintrin.h".}
proc movemask*(a: m128d): cint {.importc: "_mm_movemask_pd", header: "immintrin.h".}
proc movemask_pi8*(a: m64): cint {.importc: "_mm_movemask_pi8", header: "immintrin.h".}
proc movemask*(a: m128): cint {.importc: "_mm_movemask_ps", header: "immintrin.h".}
proc movepi64_pi64*(a: m128i): m64 {.importc: "_mm_movepi64_pi64",
                                 header: "immintrin.h".}
proc movpi64_epi64*(a: m64): m128i {.importc: "_mm_movpi64_epi64",
                                 header: "immintrin.h".}
proc mpsadbw_epu8*(a: m128i; b: m128i; imm8: cint): m128i {.importc: "_mm_mpsadbw_epu8",
    header: "immintrin.h".}
proc mul_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_mul_epi32",
                                       header: "immintrin.h".}
proc mul_epu32*(a: m128i; b: m128i): m128i {.importc: "_mm_mul_epu32",
                                       header: "immintrin.h".}
proc mul*(a: m128d; b: m128d): m128d {.importc: "_mm_mul_pd", header: "immintrin.h".}
proc mul*(a: m128; b: m128): m128 {.importc: "_mm_mul_ps", header: "immintrin.h".}
